// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions > api routingQuery should gracefully handle bad response 1`] = `
Array [
  Array [
    [Function],
  ],
  Array [
    Object {
      "payload": Object {
        "activeItinerary": 0,
        "pending": 1,
        "routingType": "ITINERARY",
        "searchId": "abcd1234",
        "updateSearchInReducer": false,
      },
      "type": "ROUTING_REQUEST",
    },
  ],
  Array [
    [Function],
  ],
  Array [
    Object {
      "payload": Object {
        "requestId": "abcd1237",
        "response": Object {
          "fake": "response",
        },
        "searchId": "abcd1234",
      },
      "type": "ROUTING_RESPONSE",
    },
  ],
  Array [
    [Function],
  ],
  Array [
    Object {
      "payload": Object {
        "activeItinerary": 0,
        "pending": 1,
        "routingType": "ITINERARY",
        "searchId": "abcd1236",
        "updateSearchInReducer": false,
      },
      "type": "ROUTING_REQUEST",
    },
  ],
  Array [
    [Function],
  ],
  Array [
    Object {
      "payload": Object {
        "error": [Error: Received error from server],
        "requestId": "abcd1238",
        "searchId": "abcd1236",
        "url": "http://mock-host.com:80/api/plan?fromPlace=%2812%2C34%29%3A%3A12%2C34&toPlace=%2834%2C12%29%3A%3A34%2C12&mode=WALK%2CTRANSIT&ignoreRealtimeUpdates=false&batchId=abcd1236",
      },
      "type": "ROUTING_ERROR",
    },
  ],
]
`;

exports[`actions > api routingQuery should make a query to OTP 1`] = `
Array [
  Array [
    [Function],
  ],
  Array [
    Object {
      "payload": Object {
        "activeItinerary": 0,
        "pending": 1,
        "routingType": "ITINERARY",
        "searchId": "abcd1234",
        "updateSearchInReducer": false,
      },
      "type": "ROUTING_REQUEST",
    },
  ],
  Array [
    [Function],
  ],
  Array [
    Object {
      "payload": Object {
        "requestId": "abcd1235",
        "response": Object {
          "fake": "response",
        },
        "searchId": "abcd1234",
      },
      "type": "ROUTING_RESPONSE",
    },
  ],
]
`;
